Closed Bug 1152080 Opened 10 years ago Closed 9 years ago

[e10s] Flash disappears when the Flash overlaps the element(position:fixed) even a little

Categories

(Core :: Graphics: Layers, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla43
Tracking Status
e10s m8+ ---
firefox43 --- fixed

People

(Reporter: alice0775, Assigned: jimm)

References

()

Details

(Keywords: regression, Whiteboard: gfx-noted)

Attachments

(3 files)

Attached image screenshot
This does not happen without e10s. Steps To Reproduce: 1. Resize browser window W=750px 2. Open http://www.d-toybox.com/studio/weblog/show.php?mode=single;id=2013031500 3. Scroll page Actual Results: Flash disappears when the Flash overlaps the element(position:fixed) even a little Expected Results: Flash should be clipped properly Regression pushlog: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=741a15659b09&tochange=5969eb0fe8b5 Triggered by: Bug 1095754
Flags: needinfo?(jmathies)
Flags: needinfo?(jmathies)
Blocks: e10s-plugins
Whiteboard: gfx-noted
Assignee: nobody → jmathies
<jimm> stephend: is this a case where the content shifts and the plugin paints weird, or is this a case where the plugin disappears? <stephend> jimm: the latter, on https://saucelabs.com/jobs/9706d6b20166408d8ddb1c206c23f273 <stephend> just toggling the web console makes it vanish <stephend> jimm: http://screencast.com/t/81ZHKHOL2G <stephend> (oh, the irony in using a flash screencast to show the problem) <jimm> ah ok, that's a different bug <jimm> let me find it <stephend> great; thanks again! <stephend> (this seems pretty recent, too) <stephend> I use this all the time * geekboy is now known as geekboy|afk <jimm> stephend: maybe bug 1152080 ?
Attached file scereencast b.swf
This page[1] is also affected. [1] http://www.nicovideo.jp/watch/sm26202365
Alice, are you still seeing this? I'm not currently.
Flags: needinfo?(alice0775)
(In reply to Jim Mathies [:jimm] from comment #3) > Alice, are you still seeing this? I'm not currently. I can still reproduce the problem https://hg.mozilla.org/mozilla-central/rev/d45440221297 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:41.0) Gecko/20100101 Firefox/41.0 ID:20150626030206
Flags: needinfo?(alice0775)
Ok thanks. I'll try to put together a simplified test case.
Attached patch patch v.1Splinter Review
Slight error on my part in handling these rects, I treated them as rects that should be clipped vs. visible rects that should be accumulated.
Attachment #8646492 - Flags: review?(roc)
thanks!
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: