Bug 1152080 - Plugin configuration clip rects should be treated as visible rects. r=roc

--HG--
extra : histedit_source : bb4b49c29e5b66fa06771e6e1ba26e4496eb59ad